drivers:adc: add nrf52 saadc support to zephyr ADC
- Add sample for testing it
- Add code necessary to make it run

Signed-off-by: Rodrigo Peixoto <rodrigopex@ayna.tech>

--- a/drivers/adc/Kconfig
+++ b/drivers/adc/Kconfig
@@ -84,4 +84,6 @@ source "drivers/adc/Kconfig.sam_afec"
 
 source "drivers/adc/Kconfig.ti_adc108s102"
 
+source "drivers/adc/Kconfig.nrf52"
+
 endif # ADC
